// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Badge > snapshots > matches snapshot for default variant 1`] = `
<div
  class="inline-flex items-center rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-primary text-primary-foreground hover:bg-primary/80"
  data-variant="default"
>
  Default
</div>
`;

exports[`Badge > snapshots > matches snapshot for destructive variant 1`] = `
<div
  class="inline-flex items-center rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-destructive text-destructive-foreground hover:bg-destructive/80"
  data-variant="destructive"
>
  Error
</div>
`;

exports[`Badge > snapshots > matches snapshot for outline variant 1`] = `
<div
  class="inline-flex items-center rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 text-foreground"
  data-variant="outline"
>
  Outline
</div>
`;

exports[`Badge > snapshots > matches snapshot for secondary variant 1`] = `
<div
  class="inline-flex items-center rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-secondary text-secondary-foreground hover:bg-secondary/80"
  data-variant="secondary"
>
  Secondary
</div>
`;

exports[`Badge > snapshots > matches snapshot with custom className 1`] = `
<div
  class="inline-flex items-center rounded-full border px-2.5 py-0.5 font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-primary text-primary-foreground hover:bg-primary/80 text-lg"
  data-variant="default"
>
  Custom
</div>
`;
